--- a/src/components/MainPage/MainPage.module.scss
+++ b/src/components/MainPage/MainPage.module.scss
@@ -115,11 +115,11 @@
   display: flex;
   flex-direction: column;
   font-weight: 400;
-  font-size: 1.125em;
+  font-size: 18px;
   line-height: 1.5;
   overflow: hidden;
   @media(max-width: 1365px) {
-    font-size: 1em;
+    font-size: 16px;
   }
   &__leftAngle {
     background: url('../../static/images/left-angle.png') top left / contain no-repeat;
@@ -197,14 +197,14 @@
         color: $text-dark-blue;
         text-transform: uppercase;
         font-weight: 700;
-        font-size: 4em;
+        font-size: 72px;
         line-height: 1.04;
         opacity: 39%;
         margin-bottom: 8px;
         white-space: nowrap;
         animation: opacity-animation-title 800ms ease-out;
         @media(max-width: 1365px) {
-          font-size: 2.25em;
+          font-size: 36px;
           margin-bottom: 20px;
         }
         @media(max-width: 480px) {
@@ -264,6 +264,12 @@
         color: $text-white;
         font-size: 18px;
         line-height: 1.5;
+        & svg {
+          transition: all 200ms ease-out;
+        }
+        &:hover svg {
+          transform: translateX(50%);
+        }
       }
     }
   }
@@ -312,7 +318,7 @@
       }
       & svg {
         transform: rotate(0deg);
-        transition: transform 200ms ease-out-out;
+        transition: transform 200ms ease-out;
       }
       & span::after {
         display: block;
@@ -322,7 +328,7 @@
         height: 1px;
         width: 0%;
         left: 50%;
-        transition: width 300ms ease-out-out;
+        transition: width 100ms ease-out;
         transform: translateX(-50%);
       }
       @media(max-width: 1365px) {
