--- a/src/static/scss/fonts.scss
+++ b/src/static/scss/fonts.scss
@@ -3,3 +3,37 @@
 
 /* roboto */
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+/* SF Pro Display*/
+@font-face {
+  font-family: 'SF Pro Display';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/SFProDisplay-Regular.eot'); /* IE9 Compat Modes */
+  src: local(''),
+  url('../fonts/SFProDisplay-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../fonts/SFProDisplay-Regular.woff') format('woff'), /* Modern Browsers */
+  url('../fonts/SFProDisplay-Regular.ttf') format('truetype'), /* Safari, Android, iOS */
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  font-style: normal;
+  font-weight: 500;
+  src: url('../fonts/SFProDisplay-Medium.eot'); /* IE9 Compat Modes */
+  src: local(''),
+  url('../fonts/SFProDisplay-Medium.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../fonts/SFProDisplay-Medium.woff') format('woff'), /* Modern Browsers */
+  url('../fonts/SFProDisplay-Medium.ttf') format('truetype'), /* Safari, Android, iOS */
+}
+
+@font-face {
+  font-family: 'SF Pro Display';
+  font-style: normal;
+  font-weight: 600;
+  src: url('../fonts/SFProDisplay-Semibold.eot'); /* IE9 Compat Modes */
+  src: local(''),
+  url('../fonts/SFProDisplay-Semibold.woff2') format('woff2'), /* Super Modern Browsers */
+  url('../fonts/SFProDisplay-Semibold.woff') format('woff'), /* Modern Browsers */
+  url('../fonts/SFProDisplay-Semibold.ttf') format('truetype'), /* Safari, Android, iOS */
+}
